[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/EnemyRanged.gd" type="Script" id=1]
[ext_resource path="res://scripts/target.gd" type="Script" id=4]
[ext_resource path="res://scenes/crosshairLeft.png" type="Texture" id=6]
[ext_resource path="res://scenes/crosshairRight.png" type="Texture" id=7]
[ext_resource path="res://enemy_model.tscn" type="PackedScene" id=8]

[sub_resource type="SpatialMaterial" id=14]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.25, 2, 0.5 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.141176, 0.968627, 0.172549, 1 )

[sub_resource type="CapsuleShape" id=1]
radius = 0.750402
height = 1.3621

[sub_resource type="QuadMesh" id=9]
size = Vector2( 1.5, 1.5 )

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 1
albedo_texture = ExtResource( 6 )

[sub_resource type="QuadMesh" id=11]
size = Vector2( 1.5, 1.5 )

[sub_resource type="SpatialMaterial" id=12]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
params_billboard_mode = 1
albedo_texture = ExtResource( 7 )

[sub_resource type="CylinderShape" id=13]
radius = 16.5326
height = 18.3404

[node name="EnemyRanged" type="KinematicBody" groups=[
"Enemy",
"RangedEnemy",
]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="EnemyModel" parent="." instance=ExtResource( 8 )]
transform = Transform( -17.5152, 1.53123e-06, 1.67117e-13, 0, -2.08798e-06, 16.0357, 1.53123e-06, 17.5152, 1.9116e-06, 0, 1.01153, -3.4679e-10 )

[node name="Polyhuman" parent="EnemyModel" index="0"]
material/0 = SubResource( 14 )

[node name="BoneAttachment" type="BoneAttachment" parent="EnemyModel"]
transform = Transform( 0.999647, 0.0130708, 0.0231188, -0.0130699, -0.515661, 0.856692, 0.023119, -0.856692, -0.515309, -0.0222208, -0.00803475, -0.00426149 )
bone_name = "Finger01.R"

[node name="MeshInstance" type="MeshInstance" parent="EnemyModel/BoneAttachment"]
transform = Transform( 0.0182899, -0.00373134, -0.00200123, 0.00396853, 0.0186636, 0.000846856, 0.00240004, 0.00231704, 0.0170654, 0.00295648, 0.0107683, 0.00296886 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="BeamStartPoint" type="Spatial" parent="EnemyModel"]
transform = Transform( 0.1, 5.32907e-15, 1.05879e-22, -5.32907e-15, 0.1, 0, -1.05879e-22, 0, 0.1, -1.08289e-09, -0.0123868, 0.0444494 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.86115e-07, -1.14237, 0, 1, -1.62921e-07, 0, 0.949724, 0 )
shape = SubResource( 1 )

[node name="TargetDisplay" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.21924, 0 )
script = ExtResource( 4 )

[node name="leftCrosshair" type="MeshInstance" parent="TargetDisplay"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="rightCrosshair" type="MeshInstance" parent="TargetDisplay"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape2" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 13 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.3
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_Timer_timeout"]

[editable path="EnemyModel"]
